tests/rgs/valid/do_believe_forget.rgs
STORY quest PRIORITY 1.
    EVENT spotted ENVIRONMENT.
    EVENT lost    ENVIRONMENT.
    CONDITION is_armed MYSELF.
    PHASE active.
    AGENT Hero:
        DURING active:
            WHEN spotted ENVIRONMENT:
                DO BELIEVE is_armed.
            WHEN lost ENVIRONMENT:
                DO FORGET is_armed.
